# MiniFeldspar

./: Combining.hs  GHCBug.hs  MaybeNested.hs  README.md  typeduntyped.hs
GHCBugs/: GHCBug2.hs  (+2 more)
Shayan/: .ghci  ADT.hs  ADTChurchMonomorphic.hs  ADTChurchPolymorphic.hs  ADTExplicitPolymorphic.hs  ADTToGADT.hs  ADTUntyped.hs  Architecture.txt  CSE.hs  CSV.hs  ChangeMonad.hs  Compiler.hs  Conversion.hs  EqualityProof.hs  ErrorMonad.hs  Evaluation.hs  Existential.hs  Experiment 08-17.csv  Experiment_2014-10-13-05-45-19.csv  Experiment_2014-10-14-05-49-36.csv  Experiment_2014-10-14-08-25-22.csv  Experiment_Sharing_2014-10-13-07-42-45.csv  ExplicitADT.hs  ExplicitADTToGADT.hs  FinalTable.csv  GADT.hs  Image.pgm  ImageBig.pgm  Inference.hs  InferenceMonad.hs  MiniFeldspar.cabal  MyPrelude.hs  Normalization.hs  Optimization.hs  Overview.txt  Process  Process.hs  README.md  Script  ScriptSharing  (+21 more)
Shayan/Control/Applicative/: Recursion.hs
Shayan/Conversion/: Environment.hs  Environment.hs~  Existential.hs  Existential.hs~  Nat.hs  Variable.hs  Variable.hs~
Shayan/Conversion/Expression/: Feldspar.hs  Feldspar.hs~  STLC.hs  STLC.hs~  TemplateHaskell.hs  TemplateHaskell.hs~
Shayan/Conversion/Type/: Feldspar.hs  Feldspar.hs~  STLC.hs  STLC.hs~
Shayan/Data/: Fin.hs  Nat.hs  Proxy.hs  Proxy.hs~  Vector.hs  Vector.hs~
Shayan/Data/Nat/: GADT.hs  GADT.hs~
Shayan/Demo/: .ghci  GlueNBE.hs  TypeDirectedNBE.hs
Shayan/Docs/: EncodingTypes.txt  NormalizationFormula.txt  Overview.txt
Shayan/Docs/NormalizationProof/: makefile  proof.tex
Shayan/Docs/NormalizationProofSharing/: makefile  proof.tex
Shayan/Environment/: ADT.hs  ADTTable.hs  Conversion.hs  Existential.hs  GADT.hs  Map.hs  Plain.hs  Scoped.hs  Singleton.hs  Typed.hs
Shayan/Evaluation/: Existential.hs~  Variable.hs
Shayan/Evaluation/Feldspar/: ADTChurch.hs  ADTChurchPolymorphic.hs  ADTChurchPolymorphic.hs~  ADTUntypedDebruijn.hs  ADTUntypedMonomorphic.hs  ADTUntypedMonomorphic.hs~  ADTUntypedNamed.hs  ADTUntypedPolymorphic.hs  ADTUntypedPolymorphic.hs~  GADT.hs  GADT.hs~  GADTFirstOrder.hs  GADTHigherOrder.hs  GADTTyped.hs  GADTUntypedDebruijn.hs  Mini.hs  MiniWellScoped.hs
Shayan/Evaluation/STLC/: ADTChurch.hs  ADTChurchMonomorphic.hs  ADTChurchMonomorphic.hs~  ADTChurchPolymorphic.hs  ADTChurchPolymorphic.hs~  ADTExplicit.hs  ADTExplicitPolymorphic.hs  ADTExplicitPolymorphic.hs~  ADTUntypedDebruijn.hs  ADTUntypedMonomorphic.hs  ADTUntypedMonomorphic.hs~  ADTUntypedNamed.hs  ADTUntypedPolymorphic.hs  ADTUntypedPolymorphic.hs~  GADT.hs  GADT.hs~  GADTFirstOrder.hs  GADTHigherOrder.hs
Shayan/Evaluation/Variable/: GADT.hs
Shayan/Examples/: TemplateHaskell._hs  TemplateHaskell.hs  TemplateHaskell.hs~
Shayan/Examples/Feldspar/: ADTChurch.hs  ADTChurchPolymorphic.hs  ADTChurchPolymorphic.hs~  ADTUntypedDebruijn.hs  ADTUntypedMonomorphic.hs  ADTUntypedMonomorphic.hs~  ADTUntypedNamed.hs  ADTUntypedPolymorphic.hs  ADTUntypedPolymorphic.hs~  Conversion.hs  Conversion.hs~  GADT.hs  GADT.hs~  GADTFirstOrder.hs  GADTHigherOrder.hs  GADTTyped.hs  GADTUntypedDebruijn.hs  Mini.hs  MiniWellScoped.hs
Shayan/Examples/STLC/: ADTChurch.hs  ADTChurchMonomorphic.hs  ADTChurchPolymorphic.hs  ADTExplicit.hs  ADTExplicitPolymorphic.hs  ADTUntypedDebruijn.hs  ADTUntypedMonomorphic.hs  ADTUntypedNamed.hs  ADTUntypedPolymorphic.hs  ADTUntypedPolymorphic.hs~  Conversion.hs  Conversion.hs~  GADT.hs  GADTFirstOrder.hs  GADTHigherOrder.hs  TemplateHaskell.hs~
Shayan/Expression/: ADTChurchMonomorphic.hs  ADTChurchPolymorphic.hs  ADTExplicitPolymorphic.hs  ADTUntyped.hs  ADTUntypedUnscoped.hs  Conversion.hs  Existential.hs  GADT.hs
Shayan/Expression/Feldspar/: .ghci  ADTChurch.hs  ADTChurchPolymorphic.hs  ADTChurchPolymorphic.hs~  ADTUntypedDebruijn.hs  ADTUntypedMonomorphic.hs  ADTUntypedMonomorphic.hs~  ADTUntypedNamed.hs  ADTUntypedPolymorphic.hs  ADTUntypedPolymorphic.hs~  ADTValue.hs  C.hs  Conversion.hs  GADT.hs  GADT.hs~  GADTFirstOrder.hs  GADTHigherOrder.hs  GADTTyped.hs  GADTUntypedDebruijn.hs  GADTValue.hs  Mini._hs  Mini.hs  MiniFeldspar._hs  MiniFeldsparPrelude._hs  MiniWellScoped.hs
Shayan/Expression/STLC/: ADTChurch.hs  ADTChurchMonomorphic.hs  ADTChurchPolymorphic.hs  ADTChurchPolymorphic.hs~  ADTExplicit.hs  ADTExplicitPolymorphic.hs  ADTExplicitPolymorphic.hs~  ADTUntypedDebruijn.hs  ADTUntypedMonomorphic.hs  ADTUntypedNamed.hs  ADTUntypedPolymorphic.hs  ADTUntypedPolymorphic.hs~  ADTValue.hs  Conversion.hs~  GADT.hs  GADT.hs~  GADTFirstOrder.hs  GADTHO.hs~  GADTHigherOrder.hs  GADTHigherOrder.hs~  GADTValue.hs
Shayan/Expression/TemplateHaskell/: Conversion.hs
Shayan/Log/: Mini.c  Weaken.hs  timeTbl
Shayan/Log/Experiment/: CRCMini  CRCTH  FFTMini  FFTTH  GenC  IPTH  MKExp
Shayan/Log/Normalized C/: NIPMiniWellScoped.c
Shayan/Nat/: ADT.hs  Conversion.hs  GADT.hs  TH.hs
Shayan/Normalization/Feldspar/: ADTChurch.hs  GADTHigherOrder.hs  GADTTyped.hs  MiniWellScoped.hs  MiniWellscoped.hs
Shayan/OldExperiments/: Experiment_Sharing_2014-10-13-03-20-04.csv  Experiment_Sharing_2014-10-13-12-19-31.csv  Experiment_Sharing_2014-10-13-12-52-38.csv  Experiment_Sharing_2014-10-14-05-51-33.csv  Experiment_Sharing_2014-10-14-08-43-30.csv
Shayan/Optimization/Feldspar/: .ghci  MiniWellScoped.hs
Shayan/PrettyPrinter/: Nat.hs  Variable.hs
Shayan/PrettyPrinter/Feldspar/: ADTChurch.hs  ADTUntypedDebruijn.hs  ADTUntypedNamed.hs  GADTFirstOrder.hs
Shayan/Singleton/: Environment.hs  Environment.hs~  Nat.hs  TypeFeldspar.hs  TypeFeldspar.hs~  TypeMini.hs  TypeSTLC.hs  TypeSTLC.hs~
Shayan/SingletonEquality/: DataNatGADT.hs  DataNatGADT.hs~  EnvironmentGADT.hs  EnvironmentGADT.hs~  FeldsparGADT.hs~  STLCGADT.hs~  TypeFeldsparGADT.hs  TypeFeldsparGADT.hs~  TypeSTLCGADT.hs  TypeSTLCGADT.hs~
Shayan/Type/: ADTSimple.hs  ADTWithMetavariable.hs  Conversion.hs  Existential.hs  Feldspar.hs  GADT.hs  Herbrand.hs  Herbrand.hs~  Mini.hs  STLC.hs  Singleton.hs
Shayan/TypeChecking/: Feldspar.hs  STLC.hs
Shayan/Value/: ADT.hs  Existential.hs
Shayan/Variable/: ADT.hs  Conversion.hs  Existential.hs  GADT.hs  Plain.hs  Scoped.hs  Typed.hs
(+422 files in other folders)
