name:                MiniFeldspar
version:             0.1.0.0
synopsis:            A Conversion from Template Haskell to MiniFeldspar
homepage:            https://github.com/shayan-najd/MiniFeldspar/tree/master/Shayan
license:             GPL-3
license-file:        LICENSE
author:              Shayan Najd
maintainer:          sh dot najd att ed.ac.uk
category:            Language
build-type:          Simple
cabal-version:       >=1.8
library 
  ghc-options: -Wall -fno-warn-orphans
  extensions:
     NoMonomorphismRestriction,
     PolyKinds,
     DataKinds,
     ConstraintKinds,
     TypeOperators,
     TypeFamilies,
     GADTs,
     FlexibleInstances,
     FlexibleContexts,
     StandaloneDeriving,
     DeriveFoldable,
     DeriveFunctor,
     DeriveTraversable,
     DeriveDataTypeable,
     DeriveGeneric,
     NoUndecidableInstances,
     MonoLocalBinds,
     ScopedTypeVariables,
     MultiParamTypeClasses,
     ImplicitParams
  exposed-modules:     
     InferenceMonad,
     ChangeMonad,
     Evaluation,
     Inference,
     Singleton,
     TypeChecking,
     Existential,
     Solver,
     Test,
     Conversion,
     Variable,
     ErrorMonad,
     Evaluation.Feldspar.GADTHigherOrder,
     Evaluation.Feldspar.ADTChurch,
     Evaluation.Feldspar.GADTFirstOrder,
     Evaluation.Feldspar.ADTUntypedNamed,
     Evaluation.Feldspar.MiniWellScoped,
     Evaluation.Feldspar.ADTUntypedDebruijn,
     Evaluation.Feldspar.Mini,
     Evaluation.STLC.GADTHigherOrder,
     Evaluation.STLC.ADTChurch,
     Evaluation.STLC.GADTFirstOrder,
     Evaluation.STLC.ADTUntypedNamed,
     Evaluation.STLC.ADTExplicit,
     Evaluation.STLC.ADTUntypedDebruijn,
     Evaluation.Variable,
     Type.Feldspar,
     Type.Mini,
     Type.Herbrand,
     Type.STLC,
     Control.Applicative.Recursion,
     TypeChecking.Feldspar.ADTChurch,
     TypeChecking.STLC.ADTChurch,
     TypeChecking.STLC.ADTExplicit,
     Conversion.Nat,
     Conversion.Existential,
     Conversion.Environment,
     Conversion.Variable,
     Conversion.Type.Feldspar,
     Conversion.Type.STLC,
     Conversion.Expression.Feldspar,
     Conversion.Expression.STLC,
     Conversion.Expression.TemplateHaskell,
     Conversion.Expression.Feldspar.TypeWithnessing,
     Conversion.Expression.Feldspar.Normalization,
     Conversion.Expression.Feldspar.Lifting,
     Conversion.Expression.Feldspar.TypeInference,
     Conversion.Expression.Feldspar.NameResolution,
     Conversion.Expression.STLC.TypeWithnessing,
     Conversion.Expression.STLC.Lifting,
     Conversion.Expression.STLC.TypeInference,
     Conversion.Expression.STLC.NameResolution,
     Expression.Feldspar.GADTHigherOrder,
     Expression.Feldspar.ADTChurch,
     Expression.Feldspar.GADTValue,
     Expression.Feldspar.ADTValue,
     Expression.Feldspar.GADTFirstOrder,
     Expression.Feldspar.ADTUntypedNamed,
     Expression.Feldspar.MiniWellScoped,
     Expression.Feldspar.ADTUntypedDebruijn,
     Expression.Feldspar.Mini,
     Expression.STLC.GADTHigherOrder,
     Expression.STLC.ADTChurch,
     Expression.STLC.GADTValue,
     Expression.STLC.ADTValue,
     Expression.STLC.GADTFirstOrder,
     Expression.STLC.ADTUntypedNamed,
     Expression.STLC.ADTExplicit,
     Expression.STLC.ADTUntypedDebruijn,
     PrettyPrinter.Variable,
     PrettyPrinter.Nat,
     PrettyPrinter.Type.Feldspar,
     PrettyPrinter.Type.Mini,
     PrettyPrinter.Type.STLC,
     PrettyPrinter.Expression.Feldspar.ADTChurch,
     PrettyPrinter.Expression.Feldspar.GADTFirstOrder,
     PrettyPrinter.Expression.Feldspar.ADTUntypedNamed,
     PrettyPrinter.Expression.Feldspar.ADTUntypedDebruijn,
     PrettyPrinter.Expression.STLC.ADTChurch,
     PrettyPrinter.Expression.STLC.GADTFirstOrder,
     PrettyPrinter.Expression.STLC.ADTUntypedNamed,
     PrettyPrinter.Expression.STLC.ADTExplicit,
     PrettyPrinter.Expression.STLC.ADTUntypedDebruijn,
     Environment.ADT,
     Environment.ADTTable,
     Examples.TemplateHaskell,
     Examples.Feldspar.GADTHigherOrder,
     Examples.Feldspar.ADTChurch,
     Examples.Feldspar.GADTFirstOrder,
     Examples.Feldspar.ADTUntypedNamed,
     Examples.Feldspar.MiniWellScoped,
     Examples.Feldspar.ADTUntypedDebruijn,
     Examples.Feldspar.Mini,
     Examples.Feldspar.Conversion,
     Examples.STLC.GADTHigherOrder,
     Examples.STLC.ADTChurch,
     Examples.STLC.GADTFirstOrder,
     Examples.STLC.ADTUntypedNamed,
     Examples.STLC.ADTExplicit,
     Examples.STLC.ADTUntypedDebruijn,
     Examples.STLC.Conversion,
     Normalization.Feldspar.ADTChurch,
     Singleton.Nat,
     Singleton.TypeMini,
     Singleton.Environment,
     Singleton.TypeSTLC,
     Singleton.TypeFeldspar,
     Data.Nat,
     Data.Vector,
     Data.Fin     
  build-depends:       
     base             == 4.7.*,
     mtl              == 2.1.*,
     array            == 0.5.*,
     template-haskell == 2.9.*