name:                MiniFeldspar
version:             0.1.0.0
synopsis:            MiniFeldspar
homepage:            https://github.com/shayan-najd/MiniFeldspar/tree/master/Shayan
license:             GPL-3
license-file:        LICENSE
author:              Shayan Najd
maintainer:          sh dot najd att ed.ac.uk
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  ghc-options: -Wall -fno-warn-orphans
  extensions:
     NoMonomorphismRestriction,
     PolyKinds,
     DataKinds,
     ConstraintKinds,
     TypeOperators,
     TypeFamilies,
     GADTs,
     FlexibleInstances,
     FlexibleContexts,
     StandaloneDeriving,
     DeriveFoldable,
     DeriveFunctor,
     DeriveTraversable,
     DeriveDataTypeable,
     DeriveGeneric,
     NoUndecidableInstances,
     MonoLocalBinds,
     ScopedTypeVariables,
     MultiParamTypeClasses,
     ImplicitParams,
     TemplateHaskell,
     Rank2Types
     PatternSynonyms
  exposed-modules:
     InferenceMonad,
     Optimization,
     ChangeMonad,
     Inference,
     VanillaPrelude,
     Singleton,
     Normalization,
     TypeChecking,
     MyPrelude,
     Existential,
     Solver,
     Test,
     Conversion,
     Compiler,
     ErrorMonad,
     Type.Herbrand,
     Type.Feldspar.GADT,
     Type.Feldspar.ADT,
     TypeChecking.Feldspar,
     Conversion.Nat,
     Conversion.Environment,
     Conversion.Variable,
     Conversion.Type.Feldspar,
     Conversion.Expression.Feldspar,
     Conversion.Expression.TemplateHaskell,
     Conversion.Expression.Feldspar.Unquoting,
     Conversion.Expression.Feldspar.TypeWithnessing,
     Conversion.Expression.Feldspar.Normalization,
     Conversion.Expression.Feldspar.Lifting,
     Conversion.Expression.Feldspar.TypeInference,
     Conversion.Expression.Feldspar.CodeGeneration,
     Conversion.Expression.Feldspar.ScopeWithnessing,
     Conversion.Expression.Feldspar.NameResolution,
     Conversion.Expression.Feldspar.Evaluation.GADTHigherOrder,
     Conversion.Expression.Feldspar.Evaluation.ADTValue,
     Conversion.Expression.Feldspar.Evaluation.GADTFirstOrder,
     Conversion.Expression.Feldspar.Evaluation.ADTUntypedNamed,
     Conversion.Expression.Feldspar.Evaluation.MiniWellScoped,
     Conversion.Expression.Feldspar.Evaluation.ADTUntypedDebruijn,
     Conversion.Expression.Feldspar.Evaluation.GADTUntypedDebruijn,
     Conversion.Expression.Feldspar.Evaluation.GADTTyped,
     Expression.Feldspar.GADTHigherOrder,
     Expression.Feldspar.GADTValue,
     Expression.Feldspar.ADTValue,
     Expression.Feldspar.C,
     Expression.Feldspar.GADTFirstOrder,
     Expression.Feldspar.ADTUntypedNamed,
     Expression.Feldspar.MiniWellScoped,
     Expression.Feldspar.ADTUntypedDebruijn,
     Expression.Feldspar.GADTUntypedDebruijn,
     Expression.Feldspar.GADTTyped,
     Nat.TH,
     Nat.GADT,
     Nat.ADT,
     Variable.Typed,
     Variable.Plain,
     Variable.Scoped,
     Environment.Typed,
     Environment.Map,
     Environment.Plain,
     Environment.Scoped,
     Examples.Feldspar.Prelude.MiniWellScoped,
     Examples.Feldspar.Prelude.Environment,
     Examples.Feldspar.Prelude.TemplateHaskell,
     Examples.Feldspar.Simple.GADTHigherOrder,
     Examples.Feldspar.Simple.GADTFirstOrder,
     Examples.Feldspar.Simple.ADTUntypedNamed,
     Examples.Feldspar.Simple.MiniWellScoped,
     Examples.Feldspar.Simple.ADTUntypedDebruijn,
     Examples.Feldspar.Simple.GADTUntypedDebruijn,
     Examples.Feldspar.Simple.Conversion,
     Examples.Feldspar.Simple.GADTTyped,
     Examples.Feldspar.Simple.TemplateHaskell,
     Normalization.Feldspar.GADTHigherOrder,
     Normalization.Feldspar.MiniWellScoped,
     Normalization.Feldspar.GADTTyped,
     Optimization.Feldspar.MiniWellScoped

  build-depends:
     base             >=4.7 && <4.8,
     mtl              >=2.2 && <2.3,
     template-haskell >=2.9 && <2.10,
     array            >=0.5,
     pretty           >=1.1 && <1.2
  default-language:    Haskell2010